add: follow data checking
